# backend

./: .dockerignore  .env  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  compose.dev.sh  compose.dev.yaml  compose.local.sh  compose.local.yaml  compose.yaml  dev.env  local.env  race.gen.sql
.devcontainer/: compose.extend.yaml  devcontainer.json
common/: Cargo.toml
control-server/: README.md
data/: Cargo.toml  build.rs
data-generator/: Cargo.toml
data-server/: README.md
data/generator/src/: collect.rs  generator.rs  lib.rs  name.rs
data/generator/src/generator/: constant.rs  enumeration.rs  module.rs  table.rs
data/generator/src/generator/table/: abstract_table.rs  concrete_table.rs
data/src/: data.rs  error.rs  lib.rs  link.rs  parse.rs  schema.rs
data/src/data/: character.rs  link_test.rs  skill.rs
data/src/data/character/: path.rs  path_node.rs  skill_node.rs  talent.rs  talent_node.rs
data/src/data/item/: equipment.rs  item.rs  random_box.rs  weapon.rs
data/src/data/skill/: generic_skill.rs  scripted_skill.rs  skill.rs
database/: apply.sh  atlas.hcl
game-server/: .dockerignore  Cargo.dummy.toml  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  dev.env  environment.ron  local.env  settings.ron
game-server/game-protocol-generator/: Cargo.toml
game-server/game-protocol-generator/src/: lib.rs
game-server/game-protocol-generator/src/data/: collect.rs  generate.rs
game-server/game-protocol-generator/src/data/generate/: enumeration.rs  module.rs
game-server/server/: Cargo.toml  build.rs
game-server/server/generator/: Cargo.toml
game-server/server/generator/src/: data.rs  lib.rs  protocol.rs
game-server/server/generator/src/data/: collect.rs  generate.rs  validate.rs
game-server/server/generator/src/data/generate/: constant.rs  module.rs  table.rs
game-server/server/generator/src/protocol/: category.rs
game-server/server/macros/src/: lib.rs
game-server/server/src/: character.rs  config.rs  core.rs  data.rs  database.rs  db.rs  env.rs  game_handler.rs  main.rs  module.rs  net.rs  player.rs  protocol.rs  server.rs  settings.rs  timestamp.rs  world.rs
game-server/server/src/auth/: auth_room.rs
game-server/server/src/character/: movement.rs  resource.rs  stat.rs
game-server/server/src/core/: resource.rs  room.rs  server.rs
game-server/server/src/data/: race.rs
game-server/server/src/game_handler/: game.rs  net.rs
game-server/server/src/game_handler/game/: movement_command.rs
game-server/server/src/game_handler/net/: ping.rs
game-server/server/src/net/: authenticator.rs  game_listener.rs  game_listener_module.rs  gateway.rs  session.rs
game-server/server/src/net/gateway/: new_player.rs  new_zone.rs
game-server/server/src/network/: authenticator.rs  game_listener.rs  gateway.rs  session.rs
game-server/server/src/network/gateway/: new_player.rs  new_zone.rs
game-server/server/src/player/: account.rs
game-server/server/src/protocol/: category.rs  convert.rs  handler.rs
game-server/server/src/protocol/handler/: game.rs  net.rs
game-server/server/src/protocol/handler/game/: movement_command.rs
game-server/server/src/protocol/handler/net/: ping.rs
game-server/server/src/station/: station_room.rs
game-server/server/src/world/: field.rs  transform.rs  zone.rs
game-server/server/src/world/zone/: new_player.rs
game-server/src/: calc.rs  character.rs  config.rs  db.rs  env.rs  handler.rs  main.rs  net.rs  physics.rs  player.rs  protocol.rs  social.rs  task.rs  timestamp.rs  transaction.rs  world.rs
game-server/src/character/: effect.rs  equipment.rs  inventory.rs  movement.rs  path_tree.rs  resource.rs  sense.rs  skill_set.rs  skill_tree.rs  stat.rs  stats.rs  status.rs  talent_tree.rs
game-server/src/character/effect/: damage.rs  modify_stat.rs  resource_modify.rs  stat_modification.rs  stat_modify.rs  state_add.rs  state_clear.rs
game-server/src/character/resource/: health.rs
game-server/src/character/sense/: vision.rs
game-server/src/character/status/: combat.rs  crafting.rs  growth.rs  health.rs  mana.rs  movement.rs  shield.rs  stamina.rs
game-server/src/handler/: net.rs  play.rs  social.rs  tool.rs
game-server/src/handler/net/: ping.rs  pong.rs  zone_transfer.rs  zone_transfer_ready.rs
game-server/src/handler/play/: item_pickup.rs  movement_command.rs  skill_cancel.rs  skill_use.rs
game-server/src/handler/social/: party_create.rs  party_invite.rs
game-server/src/handler/tool/: cheat.rs
game-server/src/handler/tool/cheat/: item.rs
game-server/src/net/: authenticator.rs  game_listener.rs  gateway.rs  region.rs  session.rs  zone.rs
game-server/src/net/authenticator/: new_connection.rs
game-server/src/net/gateway/: new_player.rs  new_zone.rs
game-server/src/net/zone/: player_transfer.rs
game-server/src/player/: account.rs
game-server/src/protocol/: handler.rs
game-server/src/protocol/handler/net/: pong.rs
game-server/src/protocol/handler/play/: movement_command.rs
game-server/src/social/: faction.rs  guild.rs  party.rs  quest.rs
game-server/src/social/party/: party_create.rs  party_invite.rs  party_invite_accept.rs
game-server/src/world/: biome.rs  item.rs  time.rs  transform.rs  weather.rs  zone.rs
game-server/src/world/zone/: movement_command.rs  new_player.rs
lobby-server/: .gitignore  Cargo.dummy.toml  Cargo.toml  Dockerfile  build.rs  dev.env  go.mod  go.sum  local.env  main.go
lobby-server/api/: router.go
lobby-server/api/account/: auth.go
lobby-server/api/account/dev/: create.go  me.go  token.go
lobby-server/api/character/: common.go  create.go  list.go
lobby-server/core/: context.go
lobby-server/internal/route/character/: list.go
lobby-server/middleware/: auth.go
lobby-server/route/: router.go
lobby-server/src/: accountant.rs  auth.rs  authenticator.rs  config.rs  context.rs  db.rs  error.rs  lobby_server.rs  main.rs  protocol.rs  service.rs
lobby-server/src/auth/: authenticator.rs  dev_auth.rs  token.rs
lobby-server/src/middleware/: authenticator.rs
lobby-server/src/service/: characters.rs  dev_auth.rs
(+97 files in other folders)
