[workspace]
resolver = "3"
members = [
    "data/lib/rs",
    "db/lib/rs",
    "protocol/lib/rs",
    "util",

    "game-server",
    "lobby-server",
]

[workspace.dependencies]
bytes = { version = "1", default-features = false }
chrono = "*"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
nalgebra = "0.34"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio" ] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "*", features = ["tls-ring"] }
tonic-health = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
