[workspace]
resolver = "3"
members = [
    "data",
    "db",
    "protocol",
    "common",

    "game-server",
    "lobby-server",
]

[workspace.dependencies]
bytes = { version = "1", default-features = false }
chrono = "*"
diesel = { version = "2.3.4", features = ["postgres"] }
diesel-async = { version = "0.7.4", features = ["postgres", "pool", "deadpool"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
nalgebra = "0.34"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "*", features = ["tls-ring"] }
tonic-health = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
