[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
protocol = { path = "../protocol" }

calamine = "0.32.0"
diesel = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
data-generator = { path = "generator" }
