[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
data = { path = "../data/lib/rs" }
protocol = { path = "../protocol/lib/rs" }
util = { path = "../util" }

actix = "0.13"
bevy_ecs = "0.16.1"
bytes = { workspace = true }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["ron"] }
jsonwebtoken = { workspace = true }
mimalloc = "*"
nalgebra = { workspace = true }
quinn = "0.11"
rand = "0.9"
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
rustls-pemfile = "2.2"
serde = { workspace = true }
sqlx = { workspace = true }
#strum = { version = "0.27", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
