[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
data = { path = "../data" }
db = { path = "../db" }
protocol = { path = "../protocol" }
util = { path = "../util" }

actix = "0.13"
bevy_ecs = "0.17"
bytes = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
config = { workspace = true }
crossbeam-channel = "0.5"
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
mimalloc = { workspace = true }
nalgebra = { workspace = true }
prost = { workspace = true }
quinn = "0.11"
rand = "0.9"
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
rustls-pemfile = "2.2"
serde = { workspace = true }
#strum = { version = "0.27", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
protocol-generator = { path = "../protocol/generator" }