[package]
name = "lobby-server"
version = "0.1.0"
edition = "2024"

[dependencies]
data = { path = "../data/lib/rs" }
protocol = { path = "../protocol/lib/rs" }
util = { path = "../util" }

config = "0.15"
jsonwebtoken = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
