[package]
name = "lobby-server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
data = { path = "../data" }
db = { path = "../db" }
protocol = { path = "../protocol" }

config = { workspace = true }
jsonwebtoken = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
