[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "macros" }
protocol = { path = "../protocol/rs" }

actix = "0.13"
bevy_ecs = "0.16.1"
bytes = { version = "1", default-features = false }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["ron"] }
deadpool-postgres = "0.14"
jsonwebtoken = "9"
nalgebra = { workspace = true }
postgres-types = { version = "0.2.9", features = ["derive"] }
ron = "0.10"
serde = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
