[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "macros" }
game_data = { path = "../game-data/lib/rs" }
game_protocol = { path = "../game-protocol/rs" }

actix = "0.13"
bevy_ecs = "0.16.1"
bytes = { version = "1", default-features = false }
calamine = "0.29"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["ron"] }
gel-derive = "0.7"
gel-errors = "0.5"
gel-protocol = "0.9"
gel-tokio = { version = "0.11" }
jsonwebtoken = "9"
nalgebra = { workspace = true }
ron = "0.10"
serde = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { workspace = true }

[build-dependencies]
game_data = { path = "../game-data/lib/rs" }

heck = "0.5.0"
serde = { workspace = true }
serde_json = "1.0"
